--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
+    "serve": "^10.0.0",
+    "source-map-explorer": "^1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -54,10 +56,11 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "serve": "serve -s build"
+    "serve": "serve -s --listen=8001 build"
   },
   "jest": {
     "collectCoverageFrom": [
