--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "https": "^1.0.0",
     "jest": "20.0.4",
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.0.3",
