--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.14.1",
+    "antd-mobile": "^2.2.9",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -15,6 +17,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -32,6 +35,7 @@
     "http-proxy-middleware": "^0.19.0",
     "https": "^1.0.0",
     "jest": "20.0.4",
+    "js-md5": "^0.7.3",
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
@@ -40,10 +44,12 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "qs": "^6.6.0",
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.7.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
@@ -59,10 +65,12 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
+    "test": "node scripts/test.js --env=jsdom",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "serve": "serve -s --listen=8001 build"
+    "buildDev": "node scripts/buildDev.js",
+    "serve": "serve -s --listen=8001 build",
+    "serveDev": "serve -s --listen=8001 devbuild"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -98,15 +106,6 @@
       "mjs"
     ]
   },
-  "babel": {
-    "presets": [
-      "react-app",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-decorators-legacy"
-    ]
-  },
   "proxy": {
     "/jisuapi": {
       "target": "https://api.jisuapi.com",
@@ -114,9 +113,17 @@
       "pathRewrite": {
         "^/jisuapi": ""
       }
+    },
+    "/proxyJapi": {
+      "target": "http://api.juheapi.com",
+      "changeOrigin": true,
+      "pathRewrite": { "^/proxyJapi": "" }
     }
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.1.0"
   }
 }
